tests/snapshots/run_wpt_conformance__coreml_clamp_float16_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp float16 1D constant tensor default options, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([233, 200, 6, 198, 19, 196, 147, 198, 193, 199, 195, 72, 117, 67, 123, 70, 38, 190, 88, 199, 225, 71, 29, 192, 88, 70, 135, 69, 191, 58, 26, 200, 201, 199, 164, 72, 160, 192, 198, 72, 202, 69, 141, 69, 105, 71, 63, 192]);
  }

  nodes {
    [clampOutput] = clamp(operand_0, label="", maxValue=null, minValue=null);
  }

  outputs { clampOutput; }
}
