tests/snapshots/run_wpt_conformance__coreml_clamp_float16_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float16 1D tensor",
    "coreml",
    "PASS",
)
